# renderreport

./: .gitignore  API_DESIGN.md  COMPONENTS.md  CONTRIBUTING.md  Cargo.toml  GITHUB_DESCRIPTION.md  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  components.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  quality.yml  release.yml
docs/: API.md  CONVENTIONS.md  EXAMPLES_README.md  PACKS_README.md
examples/: README.md  advanced_components.rs  audit_pattern_example.rs  barcode_demo.rs  benchmark_report.rs  business_report.rs  charts_demo.rs  component_catalog.rs  custom_theme.rs  data_analysis_demo.rs  new_components_demo.rs  seo_audit.rs  simple_report.rs  text_formatting_demo.rs
examples/output/: README.md
fixtures/snapshots/: minimal_report.typ
npm/: .gitignore
npm/renderreport/: README.md  package.json
packs/seo-audit/: pack.toml
packs/seo-audit/components/: core_web_vitals.typ  lighthouse_scores.typ
packs/seo-audit/templates/: seo_report.typ
packs/standard/: pack.toml
packs/standard/templates/: default.typ  minimal.typ
packs/standard/themes/: dark.toml  light.toml  print.toml
src/: error.rs  lib.rs
src/components/: advanced.rs  barcode.rs  catalog.rs  charts.rs  crosstab.rs  descriptors.rs  mod.rs  registry.rs  standard.rs  text.rs
src/engine/: builder.rs  config.rs  mod.rs  world.rs
src/pack/: loader.rs  manifest.rs  mod.rs
src/patterns/: audit.rs  executive.rs  marketing.rs  mod.rs
src/render/: mod.rs  request.rs  typst_compile.rs
src/theme/: mod.rs  tokens.rs
src/vfs/: mod.rs
templates/: theme_helpers.typ
templates/components/: action_roadmap.typ  audit_table.typ  barcode.typ  before_after.typ  benchmark_summary.typ  benchmark_table.typ  benefit_strip.typ  big_number.typ  callout.typ  card_dashboard.typ  chart.typ  checklist_panel.typ  columns.typ  comparison_block.typ  comparison_cluster.typ  cover_page.typ  crosstab.typ  cta_box.typ  date_field.typ  device_preview.typ  diagnosis_panel.typ  divider.typ  dominant_issue_spotlight.typ  eyebrow.typ  fact_box.typ  faq_list.typ  feature_grid.typ  finding.typ  flow_group.typ  flow_group_body.typ  funnel.typ  gauge.typ  glossary_list.typ  grid.typ  grid_body.typ  hero_summary.typ  image.typ  impact_grid.typ  impact_triad.typ  key_value_list.typ  (+45 more)
tests/: catalog_completeness.rs  compile_smoke.rs  component_tests.rs  engine_tests.rs  key_value_list_tests.rs  new_component_tests.rs  pack_tests.rs  theme_tests.rs  typ_snapshot.rs  typ_validation.rs
